Fix to .csproj format
--HG--
branch : ch-130710-multiregion_forward_solver

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -319,7 +319,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\Vts.Test\Resources\embeddedresourcefile.txt">
       <Link>Resources\embeddedresourcefile.txt</Link>
