Edit to IForwardSolver interface to depend on more generic IOpticalPropertyRegion
--HG--
branch : ch-130710-multiregion_forward_solver

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -192,6 +192,9 @@
     <Compile Include="..\Vts\Common\Interfaces\IForwardSolver.cs">
       <Link>Common\Interfaces\IForwardSolver.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\Common\Interfaces\ILayerOpticalPropertyRegion.cs">
+      <Link>Common\Interfaces\ILayerOpticalPropertyRegion.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\Common\Interfaces\INotifyPropertyChangedPlus.cs">
       <Link>Common\Interfaces\INotifyPropertyChangedPlus.cs</Link>
     </Compile>
@@ -201,8 +204,14 @@
     <Compile Include="..\Vts\Common\Interfaces\IOldOptimizer.cs">
       <Link>Common\Interfaces\IOldOptimizer.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\Common\Interfaces\IOpticalPropertyRegion.cs">
+      <Link>Common\Interfaces\IOpticalPropertyRegion.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\Common\Interfaces\IOptimizer.cs">
       <Link>Common\Interfaces\IOptimizer.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\Common\LayerOpticalPropertyRegion.cs">
+      <Link>Common\LayerOpticalPropertyRegion.cs</Link>
     </Compile>
     <Compile Include="..\Vts\Common\Logging\AbstractLoggerFactory.cs">
       <Link>Common\Logging\AbstractLoggerFactory.cs</Link>
