GUI: Some work toward consolidating Complex/double plotting, need to debug (some weirdness) and propagate to other solver ViewModels
--HG--
branch : c-131208-spectral_fs_gui_changes

--- a/src/Vts.Gui.Silverlight/Vts.Gui.Silverlight.csproj
+++ b/src/Vts.Gui.Silverlight/Vts.Gui.Silverlight.csproj
@@ -204,7 +204,6 @@
     <Compile Include="Helpers\fjcore\Resize\ImageResizer.cs" />
     <Compile Include="Helpers\fjcore\YCbCr.cs" />
     <Compile Include="Helpers\fjcore\ZigZag.cs" />
-    <Compile Include="Model\ComplexPoint.cs" />
     <Compile Include="Model\MapData.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="Resources\Strings.Designer.cs">
@@ -231,6 +230,7 @@
     <Compile Include="ViewModel\Application\Panels\MapViewModel.cs" />
     <Compile Include="ViewModel\Application\WhiteList.cs" />
     <Compile Include="ViewModel\Controls\PositionViewModel.cs" />
+    <Compile Include="Model\DataPoint.cs" />
     <Compile Include="ViewModel\Helpers\PlotAxesLabels.cs" />
     <Compile Include="ViewModel\Application\Panels\SubPanels\SolutionDomainOptionViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\SpectralMappingViewModel.cs" />
