--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -136,16 +136,20 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">copy "$(ProjectDir)..\..\lib\Vts.MonteCarlo.Unmanaged\Vts.MonteCarlo.Unmanaged.dll" "$(TargetDir)"
+    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">
+      REM ******* DO NOT EDIT THIS SECTION IN PROPERTIES *******
+      REM Edit the .csproj file directly (it has an OS condition to make it work on Linux)
+      
+      copy "$(ProjectDir)..\..\lib\Vts.MonteCarlo.Unmanaged\Vts.MonteCarlo.Unmanaged.dll" "$(TargetDir)"
 
-IF NOT EXIST "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" mkdir "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)"
-copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" /y
+      IF NOT EXIST "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" mkdir "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)"
+      copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" /y
 
-IF $(Configuration) == Release IF NOT EXIST "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" mkdir "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries"
+      IF $(Configuration) == Release IF NOT EXIST "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" mkdir "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries"
 
-IF $(Configuration) == Release copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" /y
+      IF $(Configuration) == Release copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" /y
 
-"$(TargetDir)mc.exe" geninfiles
+      "$(TargetDir)mc.exe" geninfiles
 </PostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
@@ -155,17 +159,4 @@ IF $(Configuration) == Release copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\matla
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>copy "$(ProjectDir)..\..\lib\Vts.MonteCarlo.Unmanaged\Vts.MonteCarlo.Unmanaged.dll" "$(TargetDir)"
-
-IF NOT EXIST "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" mkdir "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)"
-copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" /y
-
-IF $(Configuration) == Release IF NOT EXIST "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" mkdir "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries"
-
-IF $(Configuration) == Release copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" /y
-
-REM "$(TargetDir)mc.exe" geninfiles
-</PostBuildEvent>
-  </PropertyGroup>
 </Project>
