Updated VtsJsonSerializer and associated tests to be compatible with classes containting ISourceProfile implementations. Next steps are: 1) add SourceInputProvider.GetAllSourceInputs() which could call a new SourceInputFactory, or use a UnityContainer to do it automatically, 2) same for TissueInputProvider.GetAllTissueInputs() 3) same for DetectorInputProvider.GetAllDetectorInputs() 4) unit tests in VtsJsonSeralizerTests that calls 1-3) and loops over all source inputs and serialize/deserialize them verifying a) no exceptions, and b) perhaps some non-default values (hard to do for concrete class types that aren't in interface, though) 5) code in command line that calls 1-3) and generates prototype lists of sourceinputs/tissueinputs/detectorinputs for others to copy-paste into their SimulationInput JSON files.

--- a/src/Vts.MonteCarlo.CommandLineApplication.Test/Vts.MonteCarlo.CommandLineApplication.Test.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication.Test/Vts.MonteCarlo.CommandLineApplication.Test.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="flatsourceprofile.cs" />
     <Compile Include="ProgramTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
