--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -479,14 +479,14 @@
     <Compile Include="MonteCarlo\Detectors\TOfRhoAndAngleDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\TOfRhoDetector.cs" />
     <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\Spherical\CustomSurfaceEmittingSphericalSource.cs" />
-    <Compile Include="MonteCarlo\Tissues\SemiInfiniteRegion.cs" />
-    <Compile Include="MonteCarlo\Tissues\CylinderRegion.cs" />
-    <Compile Include="MonteCarlo\Tissues\EllipsoidRegion.cs" />
-    <Compile Include="MonteCarlo\Tissues\LayerRegion.cs" />
+    <Compile Include="MonteCarlo\Tissues\SemiInfiniteTissueRegion.cs" />
+    <Compile Include="MonteCarlo\Tissues\CylinderTissueRegion.cs" />
+    <Compile Include="MonteCarlo\Tissues\EllipsoidTissueRegion.cs" />
+    <Compile Include="MonteCarlo\Tissues\LayerTissueRegion.cs" />
     <Compile Include="MonteCarlo\Tissues\MultiLayerTissue.cs" />
     <Compile Include="MonteCarlo\Tissues\SingleInclusionTissue.cs" />
     <Compile Include="MonteCarlo\Tissues\TissueBase.cs" />
-    <Compile Include="MonteCarlo\Tissues\VoxelRegion.cs" />
+    <Compile Include="MonteCarlo\Tissues\VoxelTissueRegion.cs" />
     <Compile Include="MonteCarlo\Extensions\StatisticsExtensions.cs" />
     <Compile Include="MonteCarlo\Extensions\VirtualBoundariesExtensionMethods.cs" />
     <Compile Include="MonteCarlo\VirtualBoundaries\pMCDiffuseReflectanceVirtualBoundary.cs" />
